--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
 <nav>
   <h1>Clash Verge | Extend Config Generator</h1>
   <ul>
-	<li>Button1</li>
-    <li>Button2</li>
+<!--<li>Button1</li>
+    <li>Button2</li> -->
   </ul>
 </nav>
 
