--- a/index.html
+++ b/index.html
@@ -1,491 +1,132 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <title>Extend Config Generator</title>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet" />
-  <style>
-    body {
-      font-family: 'Noto Sans', sans-serif;
-      background: #151515;
-      color: #eee;
-      padding: 2em;
-      max-width: 960px;
-      margin: auto;
-      padding-bottom: 4.5em; /* место под footer */
-      box-sizing: border-box;
-      min-height: 100vh;
-      position: relative;
-    }
-    nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 2em;
-      background: #1e1e1e;
-      padding: 0.8em 1.5em;
-      border-radius: 8px;
-    }
-    nav h1 {
-      margin: 0;
-      font-size: 1.4em;
-      color: #fff;
-      user-select: none;
-    }
-    nav ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      gap: 1.5em;
-    }
-    nav ul li {
-      color: #ccc;
-      cursor: pointer;
-      user-select: none;
-      transition: color 0.2s;
-    }
-    nav ul li:hover {
-      color: #fff;
-    }
-    label {
-      display: block;
-      margin-bottom: 0.5em;
-      font-weight: 600;
-    }
-    input, textarea, pre {
-      width: 100%;
-      font-family: monospace;
-      font-size: 14px;
-      border-radius: 5px;
-      border: 1px solid #444;
-      padding: 1em;
-      background: #1e1e1e;
-      color: #eee;
-      box-sizing: border-box;
-      margin-bottom: 1em;
-      resize: vertical;
-    }
-    button {
-      margin-top: 0.5em;
-      margin-right: 1em;
-      padding: 0.5em 1em;
-      font-size: 14px;
-      background: #2a2a2a;
-      border: 1px solid #444;
-      color: #eee;
-      cursor: pointer;
-      border-radius: 5px;
-      user-select: none;
-      transition: background-color 0.3s, border-color 0.3s;
-    }
-    button:hover {
-      background: #444;
-      border-color: #666;
-    }
-    pre {
-      white-space: pre-wrap;
-      max-height: 400px;
-      overflow-y: auto;
-      background: #1a1a1a;
-      padding: 1em;
-      border-radius: 5px;
-      border: 1px solid #333;
-      margin-top: 1em;
-    }
-    #error-log {
-      color: #ff6b6b;
-      font-weight: bold;
-      white-space: pre-wrap;
-      margin-top: 0.5em;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <title>Extend Config Generator</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <nav>
+      <h1>Clash Verge | Extend Config Generator</h1>
+      <ul>
+        <li>Button1</li>
+        <li>Button2</li>
+      </ul>
+    </nav>
 
-    /* Новый блок с кнопками после генерации */
-    #action-buttons {
-      display: none; /* Скрываем по умолчанию */
-      margin-top: 0.5em;
-      margin-bottom: 1em;
-    }
+    <label for="group">Имя группы:</label>
+    <input
+      type="text"
+      id="group"
+      value="PROXY"
+      placeholder="например: PROXY"
+    />
 
-    /* FAQ стили */
-    section.faq {
-      background: #1f1f1f;
-      padding: 1.5em 1.5em 1.2em 1.5em;
-      border-radius: 8px;
-      margin-top: 2em;
-      color: #bbb;
-      font-size: 14px;
-      line-height: 1.6em;
-      user-select: text; /* текст можно выделять */
-    }
-    section.faq h2 {
-      font-size: 1.4em;
-      margin: 0 0 0.6em 0;
-      color: #fff;
-      line-height: 1.2;
-      cursor: pointer;
-      user-select: none; /* заголовок нельзя выделять */
-      outline: none;
-    }
-    #faq-content {
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height 0.4s ease;
-    }
-    #faq-content.expanded {
-      max-height: 1000px; /* достаточно, чтобы показать весь текст */
-    }
-    #faq-content p {
-      margin: 0.6em 0;
-      user-select: text;
-    }
-    .faq-block {
-      margin-bottom: 1.2em;
-      padding-left: 1em;
-      border-left: 3px solid #444;
-    }
+    <label for="input">Список доменов/IP/CIDR:</label>
+    <textarea id="input" rows="7"></textarea>
 
-    .faq-block h3 {
-      margin: 0 0 0.4em;
-      font-size: 1.1em;
-      color: #fff;
-    }
+    <div>
+      <button
+        onclick="generate()"
+        id="btn-generate"
+        title="Сгенерировать"
+      >
+        Сгенерировать
+      </button>
+    </div>
 
+    <div id="action-buttons">
+      <button onclick="simplify()" id="btn-simplify" title="Упростить">
+        Упростить
+      </button>
+      <button onclick="copyOutput()" id="btn-copy" title="Копировать">
+        Копировать
+      </button>
+      <button onclick="download()" id="btn-download" title="Скачать YAML">
+        Скачать YAML
+      </button>
+    </div>
 
-    /* Уведомление */
-    #notify {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background: #2a2a2a;
-      color: #eee;
-      padding: 12px 24px;
-      border-radius: 8px;
-      font-weight: 600;
-      user-select: none;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.4);
-      font-size: 14px;
-      z-index: 9999;
-      min-width: 200px;
-      max-width: 300px;
-      text-align: center;
+    <pre id="output" style="display: none;"></pre>
+    <div id="error-log" style="display: none;"></div>
 
-      opacity: 0;
-      visibility: hidden;
-      transition: opacity 0.3s ease, visibility 0.3s ease;
-    }
+    <section class="faq" aria-label="Часто задаваемые вопросы">
+      <h2
+        id="faq-toggle"
+        tabindex="0"
+        role="button"
+        aria-expanded="false"
+        aria-controls="faq-content"
+      >
+        FAQ — Как работать с этим
+      </h2>
+      <div id="faq-content" aria-hidden="true">
+        <div class="faq-block">
+          <h3>Работа с сайтом</h3>
+          <p>
+            1. Укажите адреса в виде доменов или IP (поддерживается IPv4 и IPv6).
+          </p>
+          <p>
+            2. Нажмите кнопку <code>Сгенерировать</code> для формирования
+            готового конфига.
+          </p>
+          <p>При необходимости можно скачать YAML-файл.</p>
+        </div>
 
-    #notify.show {
-      opacity: 1;
-      visibility: visible;
-    }
-	
-	code {
-	  background-color: rgba(255, 255, 255, 0.1); /* полупрозрачный светлый фон */
-	  padding: 2px 5px;
-	  border-radius: 3px;
-	  font-family: monospace;
-	  font-size: 90%;
-	  color: #eee;
-	  user-select: text;
-	}
+        <div class="faq-block">
+          <h3>Что делает кнопка «Упростить»?</h3>
+          <p>
+            Кнопка <code>Упростить</code> объединяет домены в правила
+            <code>DOMAIN-SUFFIX</code>, если это возможно.
+          </p>
+        </div>
 
-    /* Footer */
-    footer {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background: #2a2a2a;
-      color: #ccc;
-      text-align: center;
-      padding: 0.8em 0;
-      font-size: 14px;
-      user-select: none;
-      box-sizing: border-box;
-      border-top: 1px solid #444;
-      z-index: 1000;
-    }
-  </style>
-</head>
-<body>
+        <div class="faq-block">
+          <h3>Работа с Clash Verge</h3>
+          <p>
+            Полученный конфиг добавьте в Clash Verge через
+            <code>Profiles → Global Extend Config</code>.
+          </p>
+        </div>
 
-<nav>
-  <h1>Clash Verge | Extend Config Generator</h1>
-  <ul>
-<!--<li>Button1</li>
-    <li>Button2</li> -->
-  </ul>
-</nav>
+        <div class="faq-block">
+          <h3>Режим прокси</h3>
+          <p>
+            В блоке <code>Proxy Mode (Home → Proxy Mode)</code> выберите режим
+            <code>Rule</code>.
+          </p>
+        </div>
 
-<label for="group">Имя группы:</label>
-<input type="text" id="group" value="PROXY" placeholder="например: PROXY"/>
+        <div class="faq-block">
+          <h3>Что такое группа?</h3>
+          <p>
+            Это имя прокси-группы (например, <code>PROXY</code> или
+            <code>AUTO</code>).
+          </p>
+        </div>
 
-<label for="input">Список доменов/IP/CIDR:</label>
-<textarea id="input" placeholder="example.com
-104.16.0.0/12
-2405:4800::/32
-1.2.3.4
-sub.google.ru
-spotify.com
-www.spotify.com" rows="7"></textarea>
+        <div class="faq-block">
+          <h3>Что такое <code>MATCH</code>?</h3>
+          <p>Это правило по умолчанию, применяемое ко всему остальному трафику.</p>
+        </div>
+      </div>
+    </section>
 
-<div>
-  <button onclick="generate()" id="btn-generate" title="Сгенерировать">Сгенерировать</button>
-</div>
+    <div
+      id="notify"
+      role="alert"
+      aria-live="assertive"
+      aria-atomic="true"
+    ></div>
 
-<!-- Новый блок с кнопками, которые показываем после генерации -->
-<div id="action-buttons">
-  <button onclick="simplify()" id="btn-simplify" title="Упростить">Упростить</button>
-  <button onclick="copyOutput()" id="btn-copy" title="Копировать">Копировать</button>
-  <button onclick="download()" id="btn-download" title="Скачать YAML">Скачать YAML</button>
-</div>
+    <footer>
+      &copy; pwd: d4rked // Clash Verge | Extend Config Generator
+    </footer>
 
-<pre id="output" style="display:none;"></pre>
-<div id="error-log" style="display:none;"></div>
-
-<section class="faq" aria-label="Часто задаваемые вопросы">
-  <h2 id="faq-toggle" tabindex="0" role="button" aria-expanded="false" aria-controls="faq-content">
-    FAQ — Как работать с этим
-  </h2>
-<div id="faq-content" aria-hidden="true">
-
-  <div class="faq-block">
-    <h3>Работа с сайтом</h3>
-    <p>1. Укажите адреса в виде доменов или IP (поддерживается IPv4 и IPv6).</p>
-    <p>2. Нажмите кнопку <code>Сгенерировать</code> для формирования готового конфига.</p>
-    <p>При необходимости можно скачать YAML-файл.</p>
-  </div>
-
-  <div class="faq-block">
-    <h3>Что делает кнопка «Упростить»?</h3>
-    <p>Кнопка <code>Упростить</code> объединяет домены в правила <code>DOMAIN-SUFFIX</code>, если это возможно (имеет общий основной домен).</p>
-    <p>Это делает конфигурацию компактнее и удобнее для восприятия.</p>
-  </div>
-
-  <div class="faq-block">
-    <h3>Работа с Clash Verge</h3>
-    <p>Полученный конфиг добавьте в Clash Verge через <code>Profiles → Global Extend Config</code>.</p>
-    <p>Правила отобразятся во вкладке <code>Rules</code> и будут применяться автоматически.</p>
-  </div>
-
-  <div class="faq-block">
-    <h3>Режим прокси</h3>
-    <p>В блоке <code>Proxy Mode (Home → Proxy Mode)</code> выберите режим <code>Rule</code> для корректной работы.</p>
-  </div>
-
-  <div class="faq-block">
-    <h3>Что такое группа?</h3>
-    <p>Это имя прокси-группы (например, <code>PROXY</code> или <code>AUTO</code>), через которую будет идти трафик.</p>
-    <p>По умолчанию используется <code>PROXY</code>.</p>
-  </div>
-
-  <div class="faq-block">
-    <h3>Что такое <code>MATCH</code>?</h3>
-    <p>Это правило по умолчанию, применяемое ко всему остальному трафику, не попавшему под другие правила.</p>
-  </div>
-
-</div>
-
-</section>
-
-<div id="notify" role="alert" aria-live="assertive" aria-atomic="true"></div>
-
-<footer>
-  &copy; pwd: d4rked // Clash Verge | Extend Config Generator
-</footer>
-
-<script>
-  const input = document.getElementById("input");
-  const group = document.getElementById("group");
-  const output = document.getElementById("output");
-  const errorLog = document.getElementById("error-log");
-  const faqToggle = document.getElementById("faq-toggle");
-  const faqContent = document.getElementById("faq-content");
-  const notify = document.getElementById("notify");
-  const actionButtons = document.getElementById("action-buttons"); // Добавил
-
-  // Вспомогательные проверки IP
-  function validateIPv4(ip) {
-    const parts = ip.split('.');
-    if (parts.length !== 4) return false;
-    return parts.every(x => /^\d+$/.test(x) && Number(x) >=0 && Number(x) <= 255);
-  }
-
-  function validateIPv4CIDR(cidr) {
-    const [ip, mask] = cidr.split('/');
-    return validateIPv4(ip) && +mask >= 0 && +mask <= 32;
-  }
-
-  function validateIPv6CIDR(cidr) {
-    const [ip, mask] = cidr.split('/');
-    return /^([a-fA-F0-9:]+)$/.test(ip) && +mask >= 0 && +mask <= 128;
-  }
-
-  function isIPv4(ip) {
-    return /^\d{1,3}(\.\d{1,3}){3}$/.test(ip);
-  }
-
-  // Генерация правил
-  function generateRules(simplify = false) {
-    const g = group.value.trim();
-
-    let raw = input.value.trim();
-
-    // Заменяем только запятые на переносы строк, не трогаем пробелы
-    raw = raw.replace(/,/g, "\n");
-
-    const lines = raw.split("\n").map(x => x.trim()).filter(Boolean);
-    const rules = [];
-    const suffixes = new Set();
-    const errors = [];
-
-    for (const line of lines) {
-      if (line.startsWith("#")) continue;
-      if (line.includes('/')) {
-        if (validateIPv4CIDR(line)) {
-          rules.push(`- IP-CIDR,${line},${g}`);
-        } else if (validateIPv6CIDR(line)) {
-          rules.push(`- IP-CIDR6,${line},${g}`);
-        } else {
-          rules.push(`# ERROR: ${line}`);
-          errors.push(`Некорректный CIDR: ${line}`);
-        }
-      } else if (isIPv4(line)) {
-        if (validateIPv4(line)) {
-          rules.push(`- IP-CIDR,${line}/32,${g}`);
-        } else {
-          rules.push(`# ERROR: ${line}`);
-          errors.push(`Некорректный IP: ${line}`);
-        }
-      } else if (line.startsWith("+.")) {
-        suffixes.add(line.slice(2));
-      } else if (line.startsWith(".")) {
-        suffixes.add(line.slice(1));
-      } else if (line.includes(".")) {
-        if (simplify) {
-          const parts = line.split(".");
-          // Упрощаем только если есть поддомен и он не "www"
-          if (parts.length > 2 && parts[0].toLowerCase() !== "www") {
-            suffixes.add(parts.slice(-2).join("."));
-          } else {
-            rules.push(`- DOMAIN,${line},${g}`);
-          }
-        } else {
-          rules.push(`- DOMAIN,${line},${g}`);
-        }
-      } else {
-        rules.push(`# ERROR: ${line}`);
-        errors.push(`Не распознан формат: ${line}`);
-      }
-    }
-
-    if (simplify) {
-      suffixes.forEach(s => rules.unshift(`- DOMAIN-SUFFIX,${s},${g}`));
-    }
-
-    rules.push("- MATCH,DIRECT");
-
-    return { yaml: `rules:\n${rules.map(r => "  " + r).join("\n")}\n`, errors };
-  }
-
-  // Показ уведомлений с текстом и цветом (цвет задаёт тип)
-  // type: "success", "error", "info"
-  function showNotify(text, type = "info") {
-    notify.textContent = text;
-    notify.style.backgroundColor = type === "success" ? "#28a745" :
-                                    type === "error" ? "#dc3545" : "#2a2a2a";
-    notify.classList.add("show");
-    clearTimeout(notify._timeout);
-    notify._timeout = setTimeout(() => {
-      notify.classList.remove("show");
-    }, 2500);
-  }
-
-  // Отобразить результат и ошибки
-  function showResult(yaml, errors) {
-    output.style.display = "block";
-    errorLog.style.display = "block";
-    output.textContent = yaml;
-    errorLog.textContent = errors.join("\n");
-
-    // Показываем блок кнопок после генерации
-    actionButtons.style.display = "block";
-
-    if (errors.length) {
-      showNotify("Возникла ошибка при генерации конфига", "error");
-    } else {
-      showNotify("Конфиг успешно сгенерирован", "success");
-    }
-  }
-
-  function generate() {
-    if (!input.value.trim()) {
-      showNotify("Пожалуйста, внесите список доменов/IP/CIDR", "error");
-      return;
-    }
-    const { yaml, errors } = generateRules(false);
-    showResult(yaml, errors);
-  }
-
-  function simplify() {
-    if (!input.value.trim()) {
-      showNotify("Пожалуйста, внесите список доменов/IP/CIDR", "error");
-      return;
-    }
-    const { yaml, errors } = generateRules(true);
-    showResult(yaml, errors);
-    showNotify("Конфиг упрощён", "info");
-  }
-
-  // Копирование с уведомлением
-  function copyOutput() {
-    if (!output.textContent.trim()) {
-      showNotify("Нет данных для копирования", "error");
-      return;
-    }
-    navigator.clipboard.writeText(output.textContent).then(() => {
-      showNotify("Настройки скопированы", "success");
-    });
-  }
-
-  // Скачать YAML
-  function download() {
-    if (!output.textContent.trim()) {
-      showNotify("Нет данных для скачивания", "error");
-      return;
-    }
-    const blob = new Blob([output.textContent], { type: "text/yaml" });
-    const url = URL.createObjectURL(blob);
-    const a = document.createElement("a");
-    a.href = url;
-    a.download = "clash_rules.yaml";
-    a.click();
-    URL.revokeObjectURL(url);
-  }
-
-  // FAQ раскрытие с анимацией
-  function toggleFaq() {
-    const expanded = faqToggle.getAttribute('aria-expanded') === 'true';
-    if (expanded) {
-      faqContent.classList.remove('expanded');
-      faqToggle.setAttribute('aria-expanded', 'false');
-      faqContent.setAttribute('aria-hidden', 'true');
-    } else {
-      faqContent.classList.add('expanded');
-      faqToggle.setAttribute('aria-expanded', 'true');
-      faqContent.setAttribute('aria-hidden', 'false');
-    }
-  }
-
-  faqToggle.addEventListener('click', toggleFaq);
-  faqToggle.addEventListener('keydown', e => {
-    if (e.key === 'Enter' || e.key === ' ') {
-      e.preventDefault();
-      toggleFaq();
-    }
-  });
-</script>
-
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
