--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <nav>
       <h1>Clash Verge | Extend Config Generator</h1>
       <ul>
-        <li>Button1</li>
-        <li>Button2</li>
+        <!-- <li>Button1</li> -->
+        <li><a href="https://iplist.opencck.org/ru">Open List Generator</a></li>
       </ul>
     </nav>
 
